@@ -1,6 +1,11 @@
 hw-detect (1.68) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Fix libc6-i686 queuing on smp. Closes: #497863
+
+  [ Jérémy Bobbio ]
+  * check-missing-firmware: Don't ask for firmware files that have already
+    been denied by the user in a previous question. Closes: #497395
 
  -- Joey Hess <joeyh@debian.org>  Thu, 04 Sep 2008 18:59:40 -0400
 
